# xfel_project

./: CMakeLists.txt  README.md  pyproject.toml  setup.cfg
xfel/merging/command_line/: merge.py
